# cinetag.it

./: .dockerignore  .env.sample  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  Dockerfile  Dockerfile.nginx  LICENSE  Makefile  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  pyproject.toml  renovate.json  requirements.txt  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  docker-config.yaml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  code-quality.yml  copilot-setup-steps.yml  docker-publish.yml  python-lint.yml
app/: __init__.py  cli.py  config.example.yaml  config.py  create_app.py  errors.py  exceptions.py  extensions.py  models.py  routes.py  scheduler.py  wsgi.py
app/data/: adjectives.txt  nouns.txt  verbs.txt
app/docs/: friends_feature.md  friends_interaction.md  push_notifications.md  user_authentication.md
app/models/: allowed_refresh_token.py  friend_request.py  friendship.py  misc_data.py  movie.py  movie_credit.py  movie_language_info.py  movie_region_info.py  notification.py  notification_channel.py  notification_request.py  send_confirmation_mails.py  tmdb_genre.py  tmdb_language.py  tmdb_region.py  user.py  user_calendar.py  user_email.py  user_movie.py
app/routes/: api.py  friend_api.py  html.py
app/services/: backup_service.py  friend_service.py  image_service.py  maintenance_service.py  movie_service.py  tmdb_service.py  user_service.py
app/static/: manifest.webmanifest
app/static/js/: README.md  base.js  calendar.js  csrf.js  friends.js  friends_interaction.js  movie_details.js  movies.js  profile_notifications.js  sw.js
app/static/js/fullcalendar/locales/: en-au.global.js
app/static/src/: style.scss
app/templates/: 400.html  401.html  403.html  404.html  429.html  500.html  _base.html  _navigation.html  about.html  add_friend.html  base.html  calendar.html  csrf_error.html  dashboard.html  friend_requests.html  friends_list.html  home.html  how.html  imprint.html  login.html  movie_details.html  movie_list.html  movies.html  movies_approved.html  movies_disapproved.html  movies_pending.html  navbar.html  privacy.html  profile.html  profile_notifications.html  register.html  release_dates.html  releases.html  reset_password.html  reset_password_request.html  who.html  why.html
app/utils/: auth.py  email.py  friend_code.py  ics.py  jwt_keys.py  notifications.py  profiler.py  tmdb.py  user_management.py  webpush.py
devenv/: .env.template  DOCKER.md  Dockerfile  docker-compose.yml  docker-config-test.yaml  docker-config.example.yaml  docker-connect-db.sh  docker-create-migration.sh  docker-delete-containers.sh  docker-init-db.py  docker-init-db.sh  docker-init-test-db.sh  docker-migrate.sh  docker-reset.sh  docker-run-tests.sh  docker-start.sh  docker-stop.sh  make-scripts-executable.sh
docker/: Dockerfile  claude.sh  entrypoint.sh  nginx.conf
docker/postgres/: init-test-db.sh
docker/squid/: squid-dev.conf  squid-prod.conf
migrations/: README.md  env.py
migrations/versions/: 00_create_initial_tables.py  01_add_genres_tables.py  02_add_friends_feature.py  03_increase_password_length.py  04_fix_notification_channel_enabled_type.py  05_fix_notification_channel_json_columns.py  06_migrate_datetime_columns_to_tz_aware.py  07_add_credits_tables.py  08_add_confirmation_mail_user_id.py
scripts/: vendor-fullcalendar.sh
tests/: README.md  TEST_RESULTS.md  conftest.py  test_create_app_cookies.py  test_email_background.py  test_queue_atomicity.py  test_scheduler_lock.py  test_security_config.py
tests/models/: test_allowed_refresh_token.py  test_misc_data.py  test_movie.py  test_movie_language_info.py  test_movie_region_info.py  test_tmdb_genre.py  test_tmdb_models.py
tests/routes/: test_api.py  test_auth.py  test_friend_api.py  test_friend_requests.py  test_home.py  test_navigation.py  test_notification_channels.py  test_profile.py  test_pwa.py  test_rate_limiting.py  test_releases.py  test_security_remediation.py
tests/services/: test_backup_service.py  test_browse_filters.py  test_common_movies.py  test_friend_service.py  test_image_service.py  test_image_service_extended.py  test_maintenance_service.py  test_movie_deletion.py  test_movie_service.py  test_released_view.py  test_tmdb_service.py  test_update_movie_credits.py  test_user_service.py  test_user_service_additional.py  test_user_service_extended.py
tests/utils/: test_auth.py  test_email.py  test_ics.py  test_notifications.py  test_profiler.py  test_tmdb.py  test_webpush.py
