[project]
name = "CineTagIt"
version = "1.0.0"
requires-python = "==3.14.*"
dependencies = [
  "alembic>=1.18.4",
  "apscheduler>=3.11.2",
  "babel>=2.18.0",
  "crawlerdetect>=0.3.2",
  "cryptography>=46.0.5",
  "flask>=3.1.3",
  "flask-apscheduler>=1.13.1",
  "flask-assets>=2.1.0",
  "flask-babel>=4.0.0",
  "flask-bcrypt>=1.0.1",
  "flask-caching>=2.3.1",
  "flask-jwt-extended>=4.7.1",
  "flask-mail>=0.10.0",
  "flask-migrate>=4.1.0",
  "flask-redis>=0.4.0",
  "flask-script>=2.0.6",
  "flask-sqlalchemy>=3.1.1",
  "redis>=7.2.1",
  "gunicorn>=25.1.0",
  "icalendar>=7.0.3",
  "libsass>=0.23.0",
  "natsort>=8.4.0",
  "pillow>=12.1.1",
  "psycopg2-binary>=2.9.11",
  "py-vapid>=1.9.4",
  "pyjwt>=2.11.0",
  "pytest>=9.0.2",
  "python-dotenv>=1.2.2",
  "pywebpush>=2.3.0",
  "pyyaml>=6.0.3",
  "requests>=2.32.5",
  "sqlalchemy>=2.0.48",
  "uuid>=1.30",
  "werkzeug>=3.1.6",
]

[dependency-groups]
dev = ["ruff>=0.15.4", "taplo>=0.9.3", "pre-commit>=4.5.1"]


[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [".git", "__pycache__", "venv_*"]

[tool.ruff.lint]
select = [
  "E",  # Error
  "W",  # Warnin
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  # "C90", # mccabe # TODO
  "DTZ", # flake8-datetimez
  "F",   # Pyflakes
  "G",   # flake8-logging-format
  "I",   # isort
  "PIE", # flake8-pie
  "UP",  # pyupgrade
  "RET", # flake8-return
  "RUF", # flake8-return
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "TC",  # flake8-type-checking
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
]
extend-ignore = ["TRY002", "TRY003", "TRY301"]

per-file-ignores = { "test_*" = ["S101"] }

[tool.ruff.format]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
