[project]
name = "CineTagIt"
version = "1.0.0"
requires-python = "==3.14.5"
dependencies = [
  "alembic==1.18.4",
  "apscheduler==3.11.2",
  "babel==2.18.0",
  "crawlerdetect==0.3.2",
  "cryptography==48.0.0",
  "flask==3.1.3",
  "flask-apscheduler==1.13.1",
  "flask-assets==2.1.0",
  "flask-babel==4.0.0",
  "flask-bcrypt==1.0.1",
  "flask-caching==2.4.0",
  "flask-jwt-extended==4.7.3",
  "flask-mail==0.10.0",
  "flask-migrate==4.1.0",
  "flask-redis==0.4.0",
  "flask-script==2.0.6",
  "flask-sqlalchemy==3.1.1",
  "redis==7.4.0",
  "gunicorn==26.0.0",
  "icalendar==7.1.0",
  "libsass==0.23.0",
  "natsort==8.4.0",
  "pillow==12.2.0",
  "psycopg2-binary==2.9.12",
  "py-vapid==1.9.4",
  "pyjwt==2.12.1",
  "pytest==9.0.3",
  "pytest-timeout==2.4.0",
  "python-dotenv==1.2.2",
  "pywebpush==2.3.0",
  "pyyaml==6.0.3",
  "requests==2.34.0",
  "sqlalchemy==2.0.49",
  "uuid==1.30",
  "werkzeug==3.1.8",
  "pylint==4.0.5",
]

[dependency-groups]
dev = [
  "ruff==0.15.12",
  "taplo==0.9.3",
  "pre-commit==4.6.0",
  "ty==0.0.35",
  "pytest-cov==7.1.0",
]


[tool.ruff]
line-length = 88
target-version = "py314"
exclude = [".git", "__pycache__", "venv_*"]

[tool.ruff.lint]
select = [
  "ANN002", # missing-type-args
  "ANN003", # missing-type-kwargs
  "ANN204", # missing-return-type-special-methods
  "ANN205", # missing-return-type-static-methods
  "ASYNC",  #flake8-async
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "C90",    # mccabe # TODO
  "DTZ",    # flake8-datetimez
  "E",      # Error
  "ERA",    #eradicate
  "F",      # Pyflakes
  "FURB",   # refurb
  "G",      # flake8-logging-format
  "I",      # isort
  "ISC",    # flake8-implicit-str-concat
  "LOG",    #flake8-logging
  "PERF",   # Perflint
  "PIE",    # flake8-pie
  "PLC",    # Pylint
  "PT",     # flake8-pytest-style
  "RET",    # flake8-return
  "RUF",    # flake8-return
  "S",      # flake8-bandit
  "SIM",    # flake8-simplify
  "SLF",    # flake8-pytest-style
  "TC",     # flake8-type-checking
  "TID",    # flake8-tidy-imports
  "TRY",    # tryceratops
  "UP",     # pyupgrade
  "W",      # Warnin
]

# TODO: PLR0913 and PLR2004
extend-ignore = ["TRY003", "ANN401", "PLR0913", "PLR2004"]

per-file-ignores = { "tests/*" = [
  "S101",
  "PLR2004",
  "PLC0415",
], "migrations/env.py" = [
  "ERA001",
], "app/models/*" = [
  "TC003",  # SQLAlchemy resolves Mapped[T] annotations at runtime via get_type_hints()
] }

[tool.ruff.format]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = "test_*.py"
timeout = 10

[tool.pylint.main]
# Tell pylint to look in the current directory for the 'app' folder
init-hook = "import sys; sys.path.append('.')"

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-few-public-methods",     # R0903: Hates SQLAlchemy models
  "missing-module-docstring",   # C0114
  "missing-class-docstring",    # C0115
  "missing-function-docstring", # C0116
  "no-else-return",             # R1705
  "no-else-raise",              # R1720
  "fixme",                      # W0511: Stop flagging TODOs
  "wrong-import-order",         # C0411: Ruff handles this
  "wrong-import-position",      # C0413: Ruff handles this
  "ungrouped-imports",          # C0412: Ruff handles this
  "unused-import",              # W0611: Ruff handles this
  "broad-exception-caught",     # W0718: TODO
]

[tool.pylint.DESIGN]
max-args = 8
max-positional-arguments = 8
max-locals = 25
max-attributes = 15

[tool.ty.environment]
python-version = "3.14"
root = ["."]

[tool.ty.rules]
unsupported-base = "ignore"
